# hydra-scraper

./: .envrc  CHANGELOG.md  README.org  cabal.project.local  flake.nix  hydra-scraper.cabal
app/: Main.hs
app/Main/: Cli.hs  Types.hs
src/: HydraScraper.hs
src/HydraScraper/: App.hs  Exceptions.hs  Types.hs  Utils.hs
src/HydraScraper/Types/: BuildQueueSize.hs  Main.hs
